# datacleaner

./: README.md  dirty_dataset.csv  dirty_test.ipynb  pyproject.toml
datacleaner/: __init__.py  _utils.py  cleaner.py  dtypes.py  duplicates.py  formats.py  nulls.py  standardize.py
datacleaner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_oneliner.py  test_smoke.py
