[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacleaner"
version = "0.1.0"
description = "Automated data cleaning for pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Davie"}]
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datacleaner*"]
